zigbee2mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
  labels:
    app.kubernetes.io/name: zigbee2mqtt
    app.kubernetes.io/version: "2.14.2"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: zigbee2mqtt
