zigbee2mqtt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
  labels:
    app.kubernetes.io/name: zigbee2mqtt
    app.kubernetes.io/version: "2.9.1"
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Zigbee to MQTT bridge
    gethomepage.dev/group: K3S
    gethomepage.dev/icon: zigbee2mqtt.webp
    gethomepage.dev/name: Zigbee2MQTT
spec:
  tls:
    - hosts:
        - zigbee2mqtt.petkus.id.lv
      secretName: zigbee2mqtt-certificate-secret
  ingressClassName: nginx
  rules:
    - host: zigbee2mqtt.petkus.id.lv
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  number: 8080
